added more projects and fixed padding/styling, also added tooltips

--- a/index.html
+++ b/index.html
@@ -56,19 +56,28 @@
                 <h4 class="text-center p-3"> Areas of Experience:</h4>
              </div>
             </div>
-
-             <div class="flex-wrap col-auto text-center">
-            <button id="btn-1" class="font-effect-neon rounded"data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
-            <button id="btn-2" class="font-effect-neon rounded"data-toggle="popover" data-placement="bottom" data-content="Beginner (less than a year)">CSS</button>
-            <button id="btn-3" class="font-effect-neon rounded"data-toggle="popover" data-placement="left" data-content="Beginner (less than a year)">Bootstrap</button>
-            <button id="btn-4" class="font-effect-neon rounded"data-toggle="popover" data-placement="right" data-content="Beginner (less than a year)">JavaScript</button>
-            <button id="btn-5" class="font-effect-neon rounded"data-toggle="popover" data-placement="bottom" data-content="Beginner (less than a year)">Procreate</button>
-            <button id="btn-6" class="font-effect-neon rounded"data-toggle="popover" data-placement="top" data-content="Beginner (1.5 years)">ClipStudio</button>
+            
+            <div class = "row align-items-center p-3">
+             <div class="flex-wrap col-auto text-center p-2">
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
+            <button id="btn-2" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">CSS</button>
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Web APIs</button>
+            <button id="btn-4" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">JavaScript</button>
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Node.Js</button>
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Express.Js</button>
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Inquirer</button>
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Jest</button>
+            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">OOP</button>
+            <button id="btn-5" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Procreate</button>
+            <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (1.5 years)">ClipStudio</button>
+            <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Experienced (8 years)">Traditional Art</button>
+            <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Experienced (5 years)">Digital Art</button>
             </div>
             </div>
+        </div>
 
-            <div class="row justify-content-center">
-                <div class="col-9 p-1">
+            <div class="row justify-content-center p-5">
+                <div class="col-9 p-2">
                 <p class="text-bold">
                     My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. 
                     I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
@@ -88,7 +97,7 @@
         </div>
 
         <div class="projects row justify-content-center p-3">
-                    <div class="media col-auto mx-auto">
+                    <div class="media col-auto mx-auto p-3">
                         <a target="_blank" href="https://www.instagram.com/_queenblacksheep_/">
                             <img src="assets/images/thumbnail1.jpg" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="Go directly to my art Insta page">
                         </a>
@@ -97,7 +106,7 @@
                       </div>
                     </div>
 
-                    <div class="media col-auto mx-auto">
+                    <div class="media col-auto mx-auto p-3">
                         <a target="_blank" href=" https://emistew14.github.io/Planetarium-Party/">
                             <img src="assets/images/OIP.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="My collaborative project with APIs">
                         </a>
@@ -105,8 +114,7 @@
                     <h5 class="mt-0 mb-1">Planetarium Party</h5>
                     </div>
                     </div>
-        </div>
-        <div class="row">
+        <div class="row p-3">
                     <div class="media col-auto mx-auto">
                         <a target="_blank" href=" https://emistew14.github.io/run-buddy/">
                             <img src="assets/images/thumbnail5.jpg" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="A sample fitness page">
@@ -116,6 +124,27 @@
                       </div>
                     </div>
             </div>
+            <div class="row p-3">
+                <div class="media col-auto mx-auto">
+                    <a target="_blank" href=" https://emistew14.github.io/whats-the-weather-like/">
+                        <img src="assets/images/weather.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="Using API calls to display the weather! Also saves to Local Storage">
+                    </a>
+                  <div class="media-body col-auto mx-auto">
+                    <h5 class="mt-0 mb-1">Weather Dashboard</h5>
+                  </div>
+                </div>
+        </div>
+        <div class="row p-3">
+            <div class="media col-auto mx-auto">
+                <a target="_blank" href="https://github.com/EmiStew14/make-it-professional.git">
+                    <img src="assets/images/ReadMe.png" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="A Node based ReadMe generator">
+                </a>
+              <div class="media-body col-auto mx-auto">
+                <h5 class="mt-0 mb-1">Readme Generator</h5>
+              </div>
+            </div>
+    </div>
+</div>
     </section>
 
     <section id="contact-me" class="contact row align-items-center">
@@ -129,21 +158,21 @@
                         If you would like to reach me, here are some contact points!
                     </p>
         </div>
-        <div class="row"> 
+        <div class="row p-3"> 
             <div class="col-auto">
-                   <div class="col-12 text-center">
+                   <div class="col-12 text-center p-3">
                         <a href="https://twitter.com/_queenblackshee?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @_queenblackshee</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
-                   <div class="col-12 text-center">
+                   <div class="col-12 text-center p-3">
                         <a href="https://www.instagram.com/ehmurlee96/" class="fa fa-instagram"></a>
                     </div>
-                   <div class="col-12 text-center">
+                   <div class="col-12 text-center p-3">
                         <a href="mailto:stewartemilym2014@gmail.com"> <i class="material-icons">computer</i></a>
                     </div>
-                   <div class="col-12 text-center">
+                   <div class="col-12 text-center p-3">
                         Cell: (334)782-0025
                    </div>
-                   <div class="col-12 text-center">
+                   <div class="col-12 text-center p-3">
                     <a href="https://github.com/EmiStew14"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
             </div>
