added another project

--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
               </div>
             </div>
     </div>
+    <div class="row p-3">
+        <div class="media col-auto mx-auto">
+            <a target="_blank" href="https://github.com/EmiStew14/manage-your-people.git">
+                <img src="assets/images/team.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="OOP Team builder">
+            </a>
+          <div class="media-body col-auto mx-auto">
+            <h5 class="mt-0 mb-1">Team Building Roster</h5>
+          </div>
+        </div>
+</div>
 </div>
     </section>
 
