--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row justify-content-center p-5">
                 <div class="col-9 p-2">
                 <p class="text-bold">
-                    My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse family and growing family, now consiting of 5 siblings along with my dad and step-mom. 
+                    My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse and growing family, now consiting of 5 siblings along with my dad and step-mom. 
                     I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
                     I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science.Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. 
                     I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
