adjusted styling and added some subtext

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
             <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
             <div class="row">
              <div class="col-12">
-                <h4 class="text-center p-3"> Areas of Experience:</h4>
+                <h4 class="font-effect-neon text-center text-center p-3"> Areas of Experience:</h4>
+                <h5 class="text-center p-3">(Click to see years of experience!)</h5>
              </div>
             </div>
             
-            <div class = "row align-items-center p-3">
+            <div class = "row justify-items-center p-3">
              <div class="flex-wrap col-auto text-center p-2">
             <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
             <button id="btn-2" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">CSS</button>
@@ -94,6 +95,7 @@
             <h2 class="font-effect-neon text-center">
                 My Work
             </h2>
+            <p class="text-center">(Hover for a quick overview on the projects)</p>
         </div>
 
         <div class="projects row justify-content-center p-3">
@@ -102,7 +104,7 @@
                             <img src="assets/images/thumbnail1.jpg" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="Go directly to my art Insta page">
                         </a>
                       <div class="media-body col-auto mx-auto">
-                        <h5 class="mt-0 mb-1">Artwork</h5>
+                        <h5 class="font-effect-neon mt-0 mb-1">Artwork</h5>
                       </div>
                     </div>
 
@@ -111,7 +113,7 @@
                             <img src="assets/images/OIP.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="My collaborative project with APIs">
                         </a>
                     <div class="media-body col-auto mx-auto">
-                    <h5 class="mt-0 mb-1">Planetarium Party</h5>
+                    <h5 class="font-effect-neon mt-0 mb-1">Planetarium Party</h5>
                     </div>
                     </div>
         <div class="row p-3">
@@ -120,7 +122,7 @@
                             <img src="assets/images/thumbnail5.jpg" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="A sample fitness page">
                         </a>
                       <div class="media-body col-auto mx-auto">
-                        <h5 class="mt-0 mb-1">Run Buddy</h5>
+                        <h5 class="font-effect-neon mt-0 mb-1">Run Buddy</h5>
                       </div>
                     </div>
             </div>
@@ -130,7 +132,7 @@
                         <img src="assets/images/weather.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="Using API calls to display the weather! Also saves to Local Storage">
                     </a>
                   <div class="media-body col-auto mx-auto">
-                    <h5 class="mt-0 mb-1">Weather Dashboard</h5>
+                    <h5 class="font-effect-neon mt-0 mb-1">Weather Dashboard</h5>
                   </div>
                 </div>
         </div>
@@ -140,7 +142,7 @@
                     <img src="assets/images/ReadMe.png" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="A Node based ReadMe generator">
                 </a>
               <div class="media-body col-auto mx-auto">
-                <h5 class="mt-0 mb-1">Readme Generator</h5>
+                <h5 class="font-effect-neon mt-0 mb-1">Readme Generator</h5>
               </div>
             </div>
     </div>
@@ -150,7 +152,7 @@
                 <img src="assets/images/team.jfif" class="img-thumbnail" data-toggle="tooltip" data-placement="right" title="OOP Team builder">
             </a>
           <div class="media-body col-auto mx-auto">
-            <h5 class="mt-0 mb-1">Team Building Roster</h5>
+            <h5 class="font-effect-neon mt-0 mb-1">Team Building Roster</h5>
           </div>
         </div>
 </div>
