added external page and fixed some styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!--Unordered list-->
             <ul>
                 <li>
-                    <a href= "#about-me">About Me</a>
+                    <a href= "./aboutme.html">About Me</a>
                 </li>
                 <li>
                     <a href= "#my-work">My Work</a>
@@ -42,55 +42,13 @@
             </ul>
         </nav>
     </header>
-    <section id="about-me" class="about row">
-        <div class="col-auto">
-            <h2 class="font-effect-neon text-center">
-                About Me
-            </h2>
-        </div>
-        <div id="info" class="row justify-content-center p-3">
+        <div id="info" class="row justify-content-center ">
             <div class="col-auto">
-            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
-            <div class="row">
-             <div class="col-12">
-                <h4 class="font-effect-neon text-center text-center p-3"> Areas of Experience:</h4>
-                <h5 class="text-center p-3">(Click to see years of experience!)</h5>
-             </div>
-            </div>
-            
-            <div class = "row justify-items-center p-3">
-             <div class="flex-wrap col-auto text-center p-2">
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
-            <button id="btn-2" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">CSS</button>
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Web APIs</button>
-            <button id="btn-4" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">JavaScript</button>
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Node.Js</button>
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Express.Js</button>
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Inquirer</button>
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Jest</button>
-            <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">OOP</button>
-            <button id="btn-5" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Procreate</button>
-            <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (1.5 years)">ClipStudio</button>
-            <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Experienced (8 years)">Traditional Art</button>
-            <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Experienced (5 years)">Digital Art</button>
-            </div>
+            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded p-2 mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
             </div>
         </div>
 
-            <div class="row justify-content-center p-5">
-                <div class="col-9 p-2">
-                <p class="text-bold">
-                    My name is Emily M. Stewart, I am 24 years old and currently live in Tucson, AZ. I was born in California and raised in Alabama for a majority of my life. I was raised in a very diverse and growing family, now consisting of 5 siblings along with my dad and step-mom. 
-                    I joined the United States Airforce as a Weapons Load Crew member after I turned 18, I have now been enlisted for 6 years but do not plan on making it a career. I have traveled to over 15 states and 4 different countries, got stationed in South Korea and now Arizona. 
-                    I am currently studying for my associates in Video Game Simulation and Design with a concentration of programming but I hope to transfer my credits over and persue my Bachelors in Computer Science. Some hobbies of mine include drawing/creating concept art and comics, working out, swimming, and playing video games. 
-                    I am a huge fan of Science fiction, Fantasy, Superhero, and Horror genres, essentially anything that can get my brain wondering I tend to gravitate towards that.
-                </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="my-work" class="work row p-3">
+    <section id="my-work" class="work row p-auto">
         <div class="col-auto">
             <h2 class="font-effect-neon text-center">
                 My Work
