added depth to experience buttons

--- a/aboutme.html
+++ b/aboutme.html
@@ -50,19 +50,19 @@
        
        <div class = "row justify-content-center p-3">
         <div class="d-flex flex-wrap col-auto align-content-stretch text-center p-2">
-       <button id="btn-1" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
-       <button id="btn-2" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">CSS</button>
-       <button id="btn-3" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Web APIs</button>
-       <button id="btn-4" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">JavaScript</button>
-       <button id="btn-5" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Node.Js</button>
-       <button id="btn-6" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Express.Js</button>
-       <button id="btn-7" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Inquirer</button>
-       <button id="btn-8" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Jest</button>
-       <button id="btn-9" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">OOP</button>
-       <button id="btn-10" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Procreate</button>
-       <button id="btn-11" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Beginner (1.5 years)">ClipStudio</button>
-       <button id="btn-12" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Experienced (8 years)">Traditional Art</button>
-       <button id="btn-13" class="font-effect-neon rounded "data-toggle="popover" data-placement="top" data-content="Experienced (5 years)">Digital Art</button>
+       <button id="btn-1" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">HTML</button>
+       <button id="btn-2" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">CSS</button>
+       <button id="btn-3" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Web APIs</button>
+       <button id="btn-4" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">JavaScript</button>
+       <button id="btn-5" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Node.Js</button>
+       <button id="btn-6" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Express.Js</button>
+       <button id="btn-7" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Inquirer</button>
+       <button id="btn-8" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Jest</button>
+       <button id="btn-9" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">OOP</button>
+       <button id="btn-10" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (less than a year)">Procreate</button>
+       <button id="btn-11" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Beginner (1.5 years)">ClipStudio</button>
+       <button id="btn-12" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Experienced (8 years)">Traditional Art</button>
+       <button id="btn-13" class="font-effect-neon rounded bg-dark m-1 p-1 "data-toggle="popover" data-placement="top" data-content="Experienced (5 years)">Digital Art</button>
        </div>
        </div>
     </section>
