fixed text color on styling sheet

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     </header>
         <div id="info" class="row justify-content-center ">
             <div class="col-auto">
-            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded p-2 mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
+            <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded bg-dark p-auto mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
+            <div>
+                <h1 class="text-center"> An Inspiring Full Stack Developer</h1>
+            </div>
             </div>
         </div>
 
