fixed grammar error

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <div class="col-auto">
             <img id="Me" class="img-thumbnail img-fluid h-75 w-50 rounded bg-dark p-auto mx-auto d-block" src="assets/images/Selfie2.jpg" style="width:100%" />
             <div>
-                <h1 class="text-center"> An Inspiring Full Stack Developer</h1>
+                <h1 class="text-center">Aspiring Full Stack Developer</h1>
             </div>
             </div>
         </div>
